# telebot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  conanfile.py  test.cpp  vcpkg.json
.github/workflows/: prerelease.yml  release.yml
api/: CMakeLists.txt
api/include/telebot/: api.h  events.h  plugins.h  telebot.h
api/include/telebot/cli/: cli.h
api/include/telebot/render/: imgui.h
api/include/telebot/server/: video.h
api/include/telebot/utils/: binary.h  files.h  platform.h  stun.h  tcp.h
api/lib/tcp_server_client/include/: TcpClient.hpp  TcpConnection.hpp  TcpServer.hpp
api/lib/tcp_server_client/src/: TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp
api/src/telebot/: events.cpp  plugins.cpp  telebot.cpp
api/src/telebot/cli/: cli.cpp
api/src/telebot/render/: imgui.cpp
api/src/telebot/utils/: binary.cpp  files.cpp  platform.cpp  stun.cpp  tcp.cpp  texture.cpp
app/: CMakeLists.txt
app/src/: main.cpp
cli/: CMakeLists.txt
cli/src/: main.cpp
include/: telebot.h  utils.h  utils.hpp
include/cmds/: command.hpp
include/cmds/products/: add.hpp  find.hpp  remove.hpp  show.hpp
include/cmds/reservations/: add.hpp  find.hpp  remove.hpp  show.hpp
include/pharmacy/: pharmacy.hpp
include/telebot/: plugins.h  telebot.h
include/telebot/server/: video.h
include/telebot/utils/: files.h  logging.h  platform.h  socket.h  texture.h  video.h
include/utils/: utils_base.hpp
include/utils/hash/: hash.hpp
include/utils/io/: config.hpp
include/utils/system/: args.hpp  random.hpp
include/utils/types/: byte.hpp
scripts/: __main__.py  config.py  test.py
scripts/commands/: build.py  init.py  package.py  run.py  sdk.py
scripts/utils/: library.py  platform.py  project.py
sdk/: CMakeLists.txt  include.cmake  packages.cmake  setup.py  subdirs.cmake
src/: main.cpp  telebot.cpp  utils.cpp  utils.h
src/cmds/: command.cpp  command.h
src/cmds/products/: add.cpp  add.h  delete.cpp  delete.h  find.cpp  find.h  remove.cpp  remove.h  reserve.cpp  reserve.h  show.cpp  show.h
src/cmds/reservations/: add.cpp  add.h  cancel.cpp  cancel.h  find.cpp  find.h  remove.cpp  remove.h  show.cpp  show.h
src/pharmacy/: pharmacy.cpp  pharmacy.h
src/telebot/: plugins.cpp  telebot.cpp
src/telebot/render/: imgui.cpp
src/telebot/server/: video.cpp
src/telebot/utils/: files.cpp  logging.cpp  socket.cpp  texture.cpp  video.cpp
src/utils/: utils_base.cpp  utils_base.h
src/utils/hash/: hash.cpp  hash.h
src/utils/io/: config.cpp  config.h
src/utils/system/: args.cpp  args.h  random.cpp  random.h
src/utils/types/: byte.cpp  byte.h
vcpkg_triplets/: arm64-macos-release.cmake  x64-linux-release.cmake
